<resources>
    <string name="app_name">Componentes TIC51</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="calendarview">CalendarView</string>
    <string name="cardview">Card View</string>
    <string name="cardview1">Batman</string>
    <string name="cardview2">Superman</string>
    <string name="cardview3">Linterna Verde</string>
    <string name="checkbox">CheckBox</string>
    <string name="edittext">EditText</string>
    <string name="floatingbutton">FloatingButton</string>
    <string name="imagebutton">ImageButton</string>
    <string name="imageview">ImageView</string>
    <string name="mapview">MapView</string>
    <string name="progresssbar">ProgresssBar</string>
    <string name="radiobutton">RadioButton</string>
    <string name="ratingbar">RatingBar</string>
    <string name="seekbar">SeekBar</string>
    <string name="switchcomponent">Switch</string>
    <string name="scrollview">ScrollView</string>
    <string name="tablayout">TabLayout</string>
    <string name="listview">ListView</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="text1titulo">ToggleButton (activar/desactivar) Botón de activación</string>
    <string name="text2Parra">En Android, ToggleButton se usa para mostrar el estado de un botón marcado sin marcar</string>
    <string name="estado">Estado: </string>
    <string name="webview">WebView</string>
    <string name="videoview">VideoView</string>
    <string name="spinner">Spinner</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="desc_radio">Los RadioButtons son excelentes para proporcionar exclusion entre un conjunto de opciones. Son ideales cuando se desea mostrar todas las opciones.</string>
    <string name="desc_radiog">RadioGroup agrupa un conjunto de RadioButton y permite la selecccion de un solo RadioButton</string>
    <string name="title_activity_maps1">Map</string>
    <string name="cambiarimagen">CambiarImagen</string>
    <string name="todo">To do</string>
</resources>
